added links and donation widget

--- a/pages/progetto.mdx
+++ b/pages/progetto.mdx
@@ -27,12 +27,20 @@ Odiamo sì, ma per amore dell’emancipazione umana.
  
 ## Il Collettivo Temporaneo Odiare Lavorare è stato fondato da:
   
-* **Alessandro Sahebi**, giornalista e divulgatore.
-* **Marcin Jakubik**, sviluppatore e tech-attivista.
+* [**Alessandro Sahebi**](https://www.instagram.com/alessandro_sahebi/), giornalista e divulgatore.
+* [**Marcin Jakubik**](https://www.instagram.com/martin_m.j/), sviluppatore e tech-attivista.
 * **Francesco Chirico**, studente e appassionato di comunicazione.
-* **Tu**, che hai contribuito con la tua testimonianza.
+* **Tu**, che hai contribuito con la tua [testimonianza](/speakup).
 
 ## Sostienici
 Sostieni con un caffè l’attività di raccolta storie e fonti, oltre che un impegnativo lavoro di data entry che i militanti di CTOL hanno fatto per poter permettere alle storie di avere uno spazio e una piazza virtuale.
+
+<iframe 
+  id='kofiframe'
+  src='https://ko-fi.com/odiarelavorare/?hidefeed=true&widget=true&embed=true&preview=true'
+  style={{ border: 'none', width: '100%', padding: '4px', background: '#f9f9f9' }}
+  height='712'
+  title='odiarelavorare'>
+</iframe>
 
 export default ({ children }) => <PageLayout meta={meta}>{children}</PageLayout>
