fixed and form functionality

--- a/pages/dev-manifesto.mdx
+++ b/pages/dev-manifesto.mdx
@@ -1,8 +1,8 @@
 import PageLayout from '../components/PageLayout'
 
 export const meta = {
-  title: 'Il progetto Odiare Lavorare',
-  description: ''
+  title: 'Markdown/MDX with Next.js',
+  author: 'Lee Robinson'
 }
 
 # Il Collettivo Temporaneo Odiare Lavorare
