--- a/pages/sostienici.mdx
+++ b/pages/sostienici.mdx
@@ -1,8 +1,8 @@
 import PageLayout from '../components/PageLayout'
 
 export const meta = {
-  title: 'Markdown/MDX with Next.js',
-  author: 'Lee Robinson'
+  title: 'Sostienici',
+  author: "Sostieni l'attività di CTOL"
 }
 
 # Sostieni CTOL
