--- a/pages/resources.mdx
+++ b/pages/resources.mdx
@@ -1,8 +1,8 @@
 import PageLayout from '../components/PageLayout'
 
 export const meta = {
-  title: 'Markdown/MDX with Next.js',
-  author: 'Lee Robinson'
+  title: 'Risorse',
+  author: 'Una raccolta di risorse per approfondire gli argomenti anti-work'
 }
 
 
