404 id mismatching pog?

--- a/pages/dev-manifesto.mdx
+++ b/pages/dev-manifesto.mdx
@@ -5,42 +5,7 @@ export const meta = {
   author: 'Lee Robinson'
 }
 
-# Il Collettivo Temporaneo Odiare Lavorare
-
-*Perché odi il tuo lavoro?* È bastata questa domanda per trovarci travolti di storie, esperienze, sfoghi e rabbia. Domenica 5 dicembre 2021 dal profilo instagram di Alessandro Sahebi è stato lanciato un sondaggio: dato che odiare il lavorare non è un argomento socialmente spendibile - oltre che spesso difficilmente introiettabile dagli individui stessi -, è stato creato uno spazio safe dove poter esternare il proprio pensiero. Senza pregiudizio, morale o conseguenze.  
-Odiare lavorare è legittimo, là dove al lavoro manchi qualsiasi accortezza per chi lavora e per la sua dignità, la sua salute e il suo benessere.
-
-Oltre 2500 risposte in 24 ore e tanta frustrazione per non poter rispondere a tutte e tutti.
-
-Non potevamo lasciare che questo tema scomparisse nel drammatico oblio a cui siamo forzati per mezzo di un algoritmo e abbiamo voluto dare spazio e voce a tutti coloro che hanno usato il loro tempo per raccontarci perché oggi odiare il lavoro sia un atto politico.
-  
-
-Il Collettivo odiare lavorare è temporaneo, perché fondato in poche ore e senza alcun obiettivo a lungo termine. Potrà scomparire in pochi giorni come durare per sempre, al momento non vogliamo nemmeno porci il problema.  
-La speranza, che abbiamo provato a trasformare in prassi, è che presto arrivi il giorno in cui odiare lavorare non sia più necessario all’essere umano.  
-Rimettere in discussione le gerarchie nei luoghi di lavoro, lo strapotere economico di chi detiene gli strumenti di produzione, il ruolo del lavoro stesso nelle nostre esistenze. Utopia nel cuore di chi non ci crede, per noi è una necessità drammaticamente attuale.
-
-In [odiarelavorare.it](https://odiarelavorare.it) puoi trovare la raccolta non filtrata (se non per ragioni di riconoscimento del lavoratore o della lavoratrice) e non corretta (nemmeno grammaticalmente) di storie che non troverai nel panorama mainstream.
-
-L’odio è una parola bandita dal dibattito pubblico, perché l’odio è il sentimento di chi sceglie la distruzione alla creazione. L’odio è parte di noi, non si può non esercitare. Odiamo per distruggere un sistema ideologico ingiusto.  
-Odiamo sì, ma per amore dell’emancipazione umana.
-
- 
-## Il Collettivo Temporaneo Odiare Lavorare è stato fondato da:
-  
-* [**Alessandro Sahebi**](https://www.instagram.com/alessandro_sahebi/), giornalista e divulgatore.
-* [**Marcin Jakubik**](https://www.instagram.com/martin_m.j/), sviluppatore e tech-attivista.
-* **Francesco Chirico**, studente e appassionato di comunicazione.
-* **Tu**, che hai contribuito con la tua [testimonianza](/speakup).
-
-## Sostienici
-Sostieni con un caffè l’attività di raccolta storie e fonti, oltre che un impegnativo lavoro di data entry che i militanti di CTOL hanno fatto per poter permettere alle storie di avere uno spazio e una piazza virtuale.
-
-<iframe 
-  id='kofiframe'
-  src='https://ko-fi.com/odiarelavorare/?hidefeed=true&widget=true&embed=true&preview=true'
-  style={{ border: 'none', width: '100%', padding: '4px', background: '#f9f9f9' }}
-  height='712'
-  title='odiarelavorare'>
-</iframe>
+# Dev Manfiesto
+Hopefully available soon 
 
 export default ({ children }) => <PageLayout meta={meta}>{children}</PageLayout>
