fixing styles and privacy

--- a/pages/progetto.mdx
+++ b/pages/progetto.mdx
@@ -29,7 +29,7 @@ Odiamo sì, ma per amore dell’emancipazione umana.
   
 * [**Alessandro Sahebi**](https://www.instagram.com/alessandro_sahebi/), giornalista e divulgatore.
 * [**Marcin Jakubik**](https://www.instagram.com/martin_m.j/), sviluppatore e tech-attivista.
-* **Francesco Chirico**, studente e appassionato di comunicazione.
+* [**Francesco Chirico**](https://www.instagram.com/francescochirico97), studente e appassionato di comunicazione.
 * **Tu**, che hai contribuito con la tua [testimonianza](/speakup).
 
 ## Sostienici
