--- a/pages/sostienici.mdx
+++ b/pages/sostienici.mdx
@@ -1,5 +1,8 @@
 import PageLayout from '../components/PageLayout'
 
+export const bmcButton = `<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="odiarelavorare" data-color="#FF5F5F" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>`
+export const bmcButtonBlack = `<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="odiarelavorare" data-color="#1a1a1a" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>`
+
 export const meta = {
   title: 'Sostienici',
   author: "Sostieni l'attività di CTOL"
@@ -10,14 +13,8 @@ Sostieni con un caffè l’attività di raccolta storie e fonti, oltre che un im
 
 Sperando, un giorno, di poter bere questo caffè dal vivo.  
 In quello che un tempo era “orario di lavoro”.
-<iframe 
-  id='kofiframe'
-  src='https://ko-fi.com/odiarelavorare/?hidefeed=true&widget=true&embed=true&preview=true'
-  style={{ border: 'none', width: '100%', padding: '4px', background: '#f9f9f9' }}
-  height='712'
-  title='odiarelavorare'>
-</iframe>
 
+<div dangerouslySetInnerHTML={{ __html: bmcButton }} />
 
 
 export default ({ children }) => <PageLayout meta={meta}>{children}</PageLayout>
