--- a/pages/sostienici.mdx
+++ b/pages/sostienici.mdx
@@ -1,6 +1,7 @@
 import PageLayout from '../components/PageLayout'
 
 export const bmcButton = `<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="odiarelavorare" data-color="#FF5F5F" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>`
+export const bmcButtonBlack = `<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="odiarelavorare" data-color="#1a1a1a" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>`
 
 export const meta = {
   title: 'Sostienici',
@@ -13,7 +14,7 @@ Sostieni con un caffè l’attività di raccolta storie e fonti, oltre che un im
 Sperando, un giorno, di poter bere questo caffè dal vivo.  
 In quello che un tempo era “orario di lavoro”.
 
-<div dangerouslySetInnerHTML={{ __html: bmcButton }} />
+<a href="https://www.buymeacoffee.com/odiarelavorare" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style={{ height:'60px !important', width: '217px !important'}}/></a>
 
 
 export default ({ children }) => <PageLayout meta={meta}>{children}</PageLayout>
